--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,54 @@ ul {
 
 /* already start */
 
+.already {
+    background: #FBEECA;
+    border-radius: 0px;
+    width: 100%;
+    height: 600px;
+}
 
+.already__container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 37px;
+    justify-content: center;
+    align-items: center;
+}
+
+.already__title {
+    margin-top: 116px;
+    font-family: 'Roboto';
+
+    font-weight: 700;
+    font-size: 51px;
+    line-height: 54px;
+
+    letter-spacing: 0.5px;
+    color: #692340;
+}
+
+.already__text {
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    width: 860px;
+    color: #692340;
+    text-align: center;
+}
+
+.already__button {
+    width: 225px;
+    height: 60px;
+    background: #FBEECA;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+
+    color: #692340;
+}
 
 
 /* already end */
